testsuite/vhdl/parser_rules/test_data/integer_failure/integer_failure_001.expected
In 'integer_failure/integer_failure_001.input':1:4: parse error: Test Suite Full Match Error! Unparsed input left!
   1|  42_
    |    ^ <<-- here
